--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html, body {
   margin: 2rem;
   padding: 0;
   font-family: 'Corben', cursive;
-  background-color: rgb(240,240,240);
+  background-color: #F4ECD3;
 }
 
 canvas {
@@ -14,26 +14,31 @@ canvas {
   width: 95%;
   height: 2rem;
   padding: 2rem;
-}
-
-.sketch {
-
+  margin-bottom: 6rem;
 }
 
 h1 {
   text-align: center;
-  font-size: 30pt;
-  color: #005f73;
+  font-size: 46pt;
+  color: #005F73;
 }
 
-p, ol {
-  color: #005f73;
-  font-size: 12pt;
+p {
+  color: #005F73;
+  font-size: 16pt;
+}
+
+ol {
+  color: #005F73;
+  font-size: 16pt;
+  line-height: 2;
+  padding: 2rem;
 }
 
 .labeltype {
-  color: #005f73;
-  font-size: 16pt;
+  color: #005F73;
+  font-size: 20pt;
+  font-weight: 700;
 }
 
 .instructions {
@@ -41,7 +46,7 @@ p, ol {
 }
 
 ul {
-  color: #005f73;
+  color: #F4ECD3;
   font-size: 12pt;
   width: 40rem;
 }
@@ -50,6 +55,10 @@ ul {
   width: 45rem;
   height: 25rem;
   padding: 1rem;
-  background-color: antiquewhite;
+  background-color: #005f73;
   margin-bottom: 5rem;
+}
+
+a {
+  color: #AE2012;
 }
