--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-  margin: 2rem;
+  margin: 3%;
   padding: 0;
   font-family: 'Corben', cursive;
   background-color: #F4ECD3;
@@ -11,28 +11,28 @@ canvas {
 
 
 .info {
-  width: 95%;
-  height: 2rem;
   padding: 2rem;
-  margin-bottom: 6rem;
+  text-align: justify;
 }
 
 h1 {
   text-align: center;
-  font-size: 46pt;
+  font-size: 3rem;
   color: #005F73;
 }
 
 p {
   color: #005F73;
-  font-size: 16pt;
+  font-size: large;
+  text-align: justify;
 }
 
 ol {
   color: #005F73;
-  font-size: 16pt;
+  font-size: large;
   line-height: 2;
   padding: 2rem;
+  text-align: justify;
 }
 
 .labeltype {
@@ -43,17 +43,19 @@ ol {
 
 .instructions {
   padding: 2rem;
+  text-align: justify;
+  font-size: large;
 }
 
 ul {
   color: #F4ECD3;
-  font-size: 12pt;
-  width: 40rem;
+  font-size: medium;
+  text-align: justify;
+  width: 80%;
 }
 
 .descriptors {
-  width: 45rem;
-  height: 29rem;
+  width: 90%;
   padding: 1rem;
   background-color: #005f73;
   margin-bottom: 5rem;
